--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Create a new account!</h1>
-    <!-- <form action="" method="">
+    <form action="/auth/sign-up" method="POST">
       <label for="username">Username:</label>
       <input type="text" name="username" id="username" />
       <label for="password">Password:</label>
@@ -15,6 +15,6 @@
       <label for="confirmPassword">Confirm Password:</label>
       <input type="password" name="confirmPassword" id="confirmPassword" />
       <button type="submit">Sign up</button>
-    </form> -->
+    </form>
   </body>
 </html>
