--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,15 @@
   </head>
   <body>
     <h1>Welcome to the app!</h1>
+    <% if (user) { %>
+      <h1>Welcome to the app, <%= user.username %>!</h1>
+      <% } else { %>
+      <h1>Welcome to the app, guest.</h1>
+      <p>
+        <a href="/auth/sign-up">Sign up</a> or <a href="/auth/sign-in">sign in</a>.
+      </p>
+      <% } %>
     <a href="/auth/sign-up">Sign up</a>
+    <a href="/auth/sign-in">Sign in</a>
   </body>
 </html>
