--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,9 @@
     <h1>APP</h1>
     <% if (user) { %>
       <h1>Welcome to the app, <%= user.username %>!</h1>
+      <p>
+        <a href="/auth/sign-out">Sign out</a>
+      </p>
       <% } else { %>
       <h1>Welcome to the app, friend.</h1>
       <p>
